# CarSimulator

./: CMakeLists.txt  README.md  notes.text
src/: main.cpp
src/World/: World.cpp  World.h
src/math/: raylib_vector2_operators.h
src/physics/: Material.h  PhysicsMath.h  PhysicsWorld.cpp  PhysicsWorld.h  Rigidbody.cpp  Rigidbody.h
src/physics/Collision/: CollisionDetector.cpp  CollisionDetector.h  CollisionManifold.h  CollisionResolver.cpp  CollisionResolver.h
src/physics/CollisionShapes/: CollisionShape.h  CollisionShapeCircle.cpp  CollisionShapeCircle.h  CollisionShapeRectangle.cpp  CollisionShapeRectangle.h
src/physics/surface/: Surface.cpp  Surface.h
src/rendering/: CarRenderer.cpp  CarRenderer.h  DebugDraw.cpp  DebugDraw.h  RectangleRenderer.cpp  RectangleRenderer.h  Renderer.cpp  Renderer.h
src/simulation/car/: Car.cpp  Car.h  Tire.h  Wheel.cpp  Wheel.h
src/simulation/shapes/: Rectangle.cpp  Rectangle.h
